@@ -43,6 +43,11 @@ class WC_Payments_Admin_Test extends WP_UnitTestCase {
 		$this->payments_admin = new WC_Payments_Admin( $mock_api_client, $mock_gateway, $this->mock_account );
 	}
 
+	public function tearDown() {
+		unset( $_GET );
+		parent::tearDown();
+	}
+
 	public function test_it_renders_settings_badge_if_upe_settings_preview_is_enabled_and_upe_is_not() {
 		global $submenu;
 
@@ -91,9 +96,7 @@ class WC_Payments_Admin_Test extends WP_UnitTestCase {
 		// The badge is temporarily not shown at all. See
 		// class-wc-payments-admin.php line 227. This should be removed when
 		// implementing https://github.com/automattic/woocommerce-payments/issues/2071.
-		if ( true === true ) {
-			return;
-		}
+		static::markTestSkipped( 'Not yet implemented.' );
 
 		$this->mock_current_user_is_admin();
 
@@ -112,9 +115,7 @@ class WC_Payments_Admin_Test extends WP_UnitTestCase {
 		// The badge is temporarily not shown at all. See
 		// class-wc-payments-admin.php line 227. This should be removed when
 		// implementing https://github.com/automattic/woocommerce-payments/issues/2071.
-		if ( true === true ) {
-			return;
-		}
+		static::markTestSkipped( 'Not yet implemented.' );
 
 		$this->mock_current_user_is_admin();
 
@@ -138,5 +139,81 @@ class WC_Payments_Admin_Test extends WP_UnitTestCase {
 	private function mock_current_user_is_admin() {
 		$admin_user = self::factory()->user->create( [ 'role' => 'administrator' ] );
 		wp_set_current_user( $admin_user );
+	}
+
+	/**
+	 * @dataProvider data_maybe_redirect_to_onboarding
+	 */
+	public function test_maybe_redirect_to_onboarding( $expected_times_redirect_called, $is_stripe_connected, $get_params ) {
+		$_GET = $get_params;
+
+		$this->mock_account
+			->method( 'is_stripe_connected' )
+			->willReturn( $is_stripe_connected );
+
+		$this->mock_account
+			->expects( $this->exactly( $expected_times_redirect_called ) )
+			->method( 'redirect_to_onboarding_page' );
+
+		$this->payments_admin->maybe_redirect_to_onboarding();
+	}
+
+	/**
+	 * Data provider for test_maybe_redirect_to_onboarding
+	 */
+	public function data_maybe_redirect_to_onboarding() {
+		return [
+			'no_get_params'        => [
+				0,
+				false,
+				[],
+			],
+			'empty_page_param'     => [
+				0,
+				false,
+				[
+					'path' => '/payments/overview',
+				],
+			],
+			'incorrect_page_param' => [
+				0,
+				false,
+				[
+					'page' => 'wc-settings',
+					'path' => '/payments/overview',
+				],
+			],
+			'empty_path_param'     => [
+				0,
+				false,
+				[
+					'page' => 'wc-admin',
+				],
+			],
+			'incorrect_path_param' => [
+				0,
+				false,
+				[
+					'page' => 'wc-admin',
+					'path' => '/payments/does-not-exist',
+				],
+			],
+			'stripe_connected'     => [
+				0,
+				true,
+				[
+					'page' => 'wc-admin',
+					'path' => '/payments/overview',
+				],
+			],
+			'happy_path'           => [
+				1,
+				false,
+				[
+					'page' => 'wc-admin',
+					'path' => '/payments/overview',
+				],
+			],
+		];
 	}
 }
